Change Navbar item names

--- a/index.html
+++ b/index.html
@@ -130,11 +130,11 @@
             </li>
 
             <li class="navbar-item">
-                <button class="navbar-link" data-nav-link>Resume</button>
+                <button class="navbar-link" data-nav-link>Summary</button>
             </li>
 
             <li class="navbar-item">
-                <a href="https://drive.google.com/file/d/182rmmr3nR-Jxmulg8ST3mS6GtxVqrLRH/view?usp=sharing" class="navbar-link" download>Download CV </a>
+                <a href="https://drive.google.com/file/d/182rmmr3nR-Jxmulg8ST3mS6GtxVqrLRH/view?usp=sharing" class="navbar-link" download>Resume</a>
             </li>
 
             <li class="navbar-item">
@@ -401,10 +401,10 @@
 
   <!-- resume -->
 
-  <article class="resume" data-page="resume">
+  <article class="summary" data-page="summary">
 
     <header>
-        <h2 class="h2 article-title">Resume</h2>
+        <h2 class="h2 article-title">Summary</h2>
     </header>
 
     <section class="timeline">
