Changed Resume to CV

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
             </li>
 
             <li class="navbar-item">
-                <a href="https://drive.google.com/file/d/182rmmr3nR-Jxmulg8ST3mS6GtxVqrLRH/view?usp=sharing" class="navbar-link" download>Resume</a>
+                <a href="https://drive.google.com/file/d/182rmmr3nR-Jxmulg8ST3mS6GtxVqrLRH/view?usp=sharing" class="navbar-link" download>CV</a>
             </li>
 
             <li class="navbar-item">
