Added new testimonial and fix image name

--- a/index.html
+++ b/index.html
@@ -257,6 +257,24 @@
                 </div>
             </li>
 
+            <li class="testimonials-item">
+                <div class="content-card" data-testimonials-item>
+
+                <figure class="testimonials-avatar-box">
+                    <img src="img/avatar-1.png" alt="Daniel lewis" width="60" data-testimonials-avatar>
+                </figure>
+
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>Hemang Sinha</h4>
+
+                <div class="testimonials-text" data-testimonials-text>
+                    <p>
+                        Sidharth was an outstanding Android development mentor at IEEE DTU. Their enthusiasm for teaching and deep knowledge of Android technologies truly inspired our students. Sidharth had a knack for simplifying complex concepts and offered hands-on guidance that created a welcoming learning atmosphere. 
+                    </p>
+                </div>
+
+                </div>
+            </li>
+
             </ul>
 
         </section>
