Added KMP $ testimonial date

--- a/index.html
+++ b/index.html
@@ -479,7 +479,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">C/C++</h5>
-                            <data value="85">80%</data>
+                            <data value="80">80%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -490,7 +490,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Java</h5>
-                            <data value="85">80%</data>
+                            <data value="80">80%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -501,7 +501,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Object Oriented Programming</h5>
-                            <data value="85">90%</data>
+                            <data value="90">90%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -512,7 +512,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Database Management Systems</h5>
-                            <data value="85">70%</data>
+                            <data value="70">70%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -523,7 +523,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Operating Systems</h5>
-                            <data value="85">80%</data>
+                            <data value="80">80%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -534,7 +534,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Android Development</h5>
-                            <data value="85">90%</data>
+                            <data value="90">90%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -544,8 +544,19 @@
 
                     <li class="skills-item">
                         <div class="title-wrapper">
+                            <h5 class="h5">Android Studio</h5>
+                            <data value="80">80%</data>
+                        </div>
+
+                        <div class="skills-progress-bg">
+                            <div class="skills-progress-fill" style="width: 80%;"></div>
+                        </div>
+                    </li>
+
+                    <li class="skills-item">
+                        <div class="title-wrapper">
                             <h5 class="h5">Kotlin</h5>
-                            <data value="85">70%</data>
+                            <data value="70">70%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -556,7 +567,7 @@
                     <li class="skills-item">
                         <div class="title-wrapper">
                             <h5 class="h5">Jetpack Compose</h5>
-                            <data value="85">60%</data>
+                            <data value="60">60%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -566,8 +577,19 @@
 
                     <li class="skills-item">
                         <div class="title-wrapper">
+                            <h5 class="h5">Kotlin Multiplatform</h5>
+                            <data value="50">50%</data>
+                        </div>
+
+                        <div class="skills-progress-bg">
+                            <div class="skills-progress-fill" style="width: 50%;"></div>
+                        </div>
+                    </li>
+
+                    <li class="skills-item">
+                        <div class="title-wrapper">
                             <h5 class="h5">Firebase</h5>
-                            <data value="85">70%</data>
+                            <data value="70">70%</data>
                         </div>
 
                         <div class="skills-progress-bg">
@@ -577,19 +599,8 @@
 
                     <li class="skills-item">
                         <div class="title-wrapper">
-                            <h5 class="h5">Android Studio</h5>
-                            <data value="85">80%</data>
-                        </div>
-
-                        <div class="skills-progress-bg">
-                            <div class="skills-progress-fill" style="width: 80%;"></div>
-                        </div>
-                    </li>
-
-                    <li class="skills-item"></li>
-                        <div class="title-wrapper">
                             <h5 class="h5">Git/GitHub</h5>
-                            <data value="85">70%</data>
+                            <data value="70">70%</data>
                         </div>
 
                         <div class="skills-progress-bg">
