--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-budgetbee.png" loading="lazy">
+                                <img src="img/project-budgetbee.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">BudgetBee - Easy Budgeting</h3>
@@ -699,7 +699,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-encrypto.png" loading="lazy">
+                                <img src="img/project-encrypto.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">Encrypto - Safe & Secure</h3>
@@ -714,7 +714,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-cinesphere.png" loading="lazy">
+                                <img src="img/project-cinesphere.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">Cinsphere - Discover Movies</h3>
@@ -729,7 +729,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-kaviar.png" loading="lazy">
+                                <img src="img/project-kaviar.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">Kaviar - Bites of Global News</h3>
@@ -744,7 +744,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-dishbook.png" loading="lazy">
+                                <img src="img/project-dishbook.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">DishBook - Cook, Share, Enjoy</h3>
@@ -759,7 +759,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-portfolio.png" loading="lazy">
+                                <img src="img/project-portfolio.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">Portfolio Website</h3>
@@ -774,7 +774,7 @@
                                     <i class="fa-regular fa-eye"></i>
                                 </div>
 
-                                <img src="img/project-esc-pos-ruby.png" loading="lazy">
+                                <img src="img/project-esc-pos-ruby.png" loading="eager">
                             </figure> 
 
                             <h3 class="project-title">ESC/POS Conversion Library</h3>
@@ -798,7 +798,7 @@
 
             <section class="mapbox" data-mapbox>
                 <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d224345.83917242874!2d77.06889908203254!3d28.52728034395305!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d01929723a67b%3A0x823bf83e796b993a!2sDelhi%2C%20India!5e0!3m2!1sen!2sin!4v1714286092267!5m2!1sen!2sin"
-                    width="400" height="300" loading="lazy">
+                    width="400" height="300" loading="eager">
                 </iframe>
             </section>
 
